# fastai-coursework

./: .gitignore  README.md  pyproject.toml
one/seasons/: README.md  app.py  requirements.txt  train_model.ipynb
shared/: utils.py
two/guitars/: README.md  app.py  train_model.ipynb
